--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@radix-ui/react-dialog": "^1.0.5",
     "@tanstack/react-query": "^5.28.2",
     "axios": "^1.6.7",
+    "i18next-browser-languagedetector": "^7.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
+    "react-i18next": "^14.1.0",
     "react-router-dom": "^6.22.3",
     "styled-components": "^6.1.8"
   },
